# bot-formatter

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  readthedocs.yaml
.github/workflows/: python-publish.yml
bot_formatter/: __init__.py  run.py
bot_formatter/formatters/: __init__.py  lang.py  lang_keys.py  pycord.py
docs/: conf.py  config.md  contributing.md  formatters.md  index.md  index.rst
ezbot/: __init__.py  __main__.py  run.py
ezbot/formatters/: pycord.py
